ukonczono budowe studni w mainmanu